--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,6 +13,7 @@ before_build:
 build_script:
 - appveyor-retry dotnet restore -v Minimal
 - dotnet -d build -c %CONFIGURATION%
+- dotnet -d pack -c %CONFIGURATION%
 test: off
 artifacts:
 - path: src\EMS.Web.Abstractions\bin\Release\*.nupkg
